--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="fullpage">
       <section class="vertical-scrolling">
         <h2>fullPage.js</h2>
-        <h3>This is the first section by Giuppi4</h3>
+        <h3>This is the first section by New</h3>
         <div class="scroll-icon">
           <p>Jump into the last slide</p>
           <a href="#fifthSection/1" class="icon-up-open-big"></a>
