--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <!-- js files -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src="js/jquery.fullPage.js"></script>
+<!--<script src="js/jquery.fullpage.extensions.min.js"></script>-->
 <script src="js/main.js"></script>
 </body>
 </html>
