--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <h3>This is the second slide</h3>
             <p class="end">Thank you!</p>
         </div>
+        <div class="horizontal-scrolling" data-anchor="slide2">
+            <h2>fullPage.js</h2>
+            <h3>This is the third slide</h3>
+            <p class="end">Thank you!</p>
+        </div>
     </section>
 </div>
 
